to also work in a full-screen application.

*****

Revamped the 'tag search' of the browser to a general search toolbar
which allows to search and display subsets of the entries
categorized by authors/years/tags/etc.

*****

Fixed minor issue with tests.


*****  Mon Dec 20 15:16:36 CET 2021  *****

Turned off complete_while_typing in browser entry-search bar
to prevent bug with auto-suggestions falling on top of quotes.

*****

Updated browser help text.

*****

Updated browser to stay at current loc when performing entry-searches
by keywords.

*****

Bumped bibmanager to version 1.4.1


*****  Sun Jan 30 12:50:17 CET 2022  *****

Fixed bug with Bib.update_content() where tags meta info was being
overwritten even when new values were empty (because empty tags
are [] instead of None).  This caused ads-update to erase the tags
info from the existing database.
Updated tests.

*****

Updated copyright year to 2022.

*****

Bumped bibmanager to version 1.4.2

*****

Updated pygments version requirement for tests.


*****  Fri Aug 26 09:43:16 CEST 2022  *****

Moved from travis to github actions for automated tests.

*****

Merge tags fix from Aaron (ads-update was not preserving tags).
Bumped bibmanager version to 1.4.5.


*****  Fri Sep 23 10:48:21 CEST 2022  *****

Updated bibtex entry in docs and README.


*****  Sun Oct 23 13:06:26 CEST 2022  *****

Updated bm.filter_field() to detect when entries with same isbn
have different dois (and allow that case).
Updated tests with new edge cases.

*****

Bumped bibmanager to version 1.4.6.
When merged, this resolves #108


*****  Thu Dec 1 13:52:32 CET 2022  *****

Update actions (setup python).

*****

Updated the runs-on version from ubuntu-latest to ubuntu-20.04
to prevent error with Python3.6 setting up (apparently is no
longer supported in ubuntu-22.04).

*****

Bumped bibmanager to version 1.4.7.


*****  Mon Jan 2 18:18:43 -03 2023  *****

Updated workflow to set appropriate os for each python version.
Fixed bug.

